added new rooms

--- a/src/assets/color.scss
+++ b/src/assets/color.scss
@@ -1,5 +1,10 @@
 :root {
-  --theme: #183f46;
+  --theme: #072325;
   --white: #fff;
-  --primary_color: #255c66;
+  --primary_color: #20444e;
+  --headerBoxShadow: 0px 0px 30px 3px rgba(23, 81, 96, 0.5);
+  --dashBg: #fe5353;
+  --dashBorder: #fc2b2b;
+  --keyboardKeyBg: #2d5675;
+  --keyboardKeyBorder: #0d265c;
 }
