--- a/src/components/game-details/game-details.scss
+++ b/src/components/game-details/game-details.scss
@@ -1,16 +1,60 @@
 .game_details_container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   height: 100%;
+  max-height: 100%;
+  padding-right: 15px;
   .game_details_card {
     background-color: var(--primary_color);
-    height: calc(100% - 30px);
+    height: 100%;
+    max-height: 500px;
     width: calc(100% - 50px);
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    min-width: 380px;
+    border-radius: 5px;
+    padding: 10px;
+    .game_details_card_title {
+      text-align: center;
+      padding-top: 10px;
+      font-weight: 600;
+    }
+    .game_details_card_subtitle {
+      padding-left: 10px;
+      font-size: 14px;
+    }
+    .keyboard_keys_wrap_container {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      .keyboard_key_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+        margin: 5px 10px;
+        min-width: 100px;
+        max-width: 100px;
+        min-height: 80px;
+        max-height: 80px;
+        border-radius: 15px;
+        border: 2px solid var(--keyboardKeyBorder);
+        background-color: var(--keyboardKeyBg);
+        &.hidden {
+          background-color: transparent;
+          border: 2px solid transparent;
+        }
+        &.space {
+          min-width: calc(100% - 20px);
+          max-width: calc(100% - 20px);
+        }
+        .keyboard_key {
+          line-height: 25px;
+          font-size: 16px;
+          font-weight: 700;
+        }
+        .keyboard_key_title {
+          font-size: 14px;
+        }
+      }
+    }
   }
 }
