--- a/src/components/game-screen/game-screen.scss
+++ b/src/components/game-screen/game-screen.scss
@@ -1,28 +1,62 @@
 .game_screen_container {
-  padding-right: 20px;
+  height: 100%;
+  width: 100%;
   .game_hud {
-    background-color: var(--primary_color);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 25px;
-    border-radius: 10px 10px 0px 0px;
+    position: relative;
+    z-index: 100;
     .score {
-      font-size: 30px;
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      font-size: 20px;
       font-weight: 600;
     }
     .sound_toggle {
+      cursor: pointer;
+      position: absolute;
+      top: 10px;
+      right: 10px;
       outline: none;
       border: none;
       background-color: transparent;
-      border-radius: 50%;
-      font-size: 35px;
+      font-size: 25px;
+    }
+    .dash_hud {
+      position: absolute;
+      bottom: 15px;
+      left: 10px;
+      padding: 5px 30px;
+      border-radius: 5px;
+      background-color: var(--dashBg);
+      border: 3px solid var(--dashBorder);
+      opacity: 1;
+      transition: 0.1s;
+      &.hidden {
+        opacity: 0;
+      }
+    }
+    .full_screen_icon {
+      cursor: pointer;
+      position: absolute;
+      bottom: 15px;
+      right: 10px;
+      border: none;
+      outline: none;
+      max-height: 30px;
+      &:hover {
+        opacity: 0.6;
+      }
     }
   }
   .game_canvas {
+    background-color: black;
     outline: none;
-    max-width: 1600px;
-    max-height: 800px;
-    border-radius: 0px 0px 10px 10px;
+    width: 100%;
+    border-radius: 5px;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+    &.opacity_0 {
+      opacity: 0 !important;
+    }
   }
 }
