--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,15 +1,11 @@
 .header_container {
-  background-image: url("../../assets//images/2D_Game_Map.png");
-  background-position: top;
-  background-size: cover;
-  min-height: 40px;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
+  background-image: url("../../assets/images/headerBg.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
   padding: 5px;
-  font-size: 40px;
-  border-radius: 0px 0px 90px 90px;
-  box-shadow: 0px 0px 30px 3px rgba(0, 0, 0, 0.5);
-  font-weight: 800;
-  color: rgb(255, 255, 255);
+  min-height: 80px;
 }
