--- a/src/containers/main-container/main-container.scss
+++ b/src/containers/main-container/main-container.scss
@@ -9,23 +9,9 @@
   .main_content {
     flex: 1 1 10px;
     display: flex;
-    align-items: center;
     justify-content: space-between;
     overflow: auto;
     position: relative;
-    .background_image_container {
-      position: absolute;
-      overflow: hidden;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-      .background_image {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        filter: blur(5px);
-        transform: scale(1.6);
-      }
-    }
+    padding: 15px;
   }
 }
